--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "behavior-driven test framework for JavaScript",
   "homepage": "http://github.com/GutenYe/spade-jasmine",
   "author": "Guten",
-  "version": "1.1.0.build2",
+  "version": "1.1.0.003",
   "directories": {
     "lib": "lib"
   },
