--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "behavior-driven test framework for JavaScript",
   "homepage": "http://github.com/GutenYe/spade-jasmine",
   "author": "Guten",
-  "version": "1.1.0.003",
+  "version": "1.1.0.004",
   "directories": {
     "lib": "lib"
   },
@@ -19,7 +19,7 @@
     }
   },
   "dependencies": {
-    "jasmine": ">= 0",
-    "spade": ">= 0"
+    "spade": ">= 0",
+    "jasmine": ">= 0"
   }
 }
